--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -14,7 +14,7 @@ th, td {
     border-bottom: 1px solid #ddd;
 }
 
-th {
+.header {
     background-color: #f2f2f2;
 }
 header {
@@ -25,4 +25,7 @@ header {
 h1 {
     margin: 0;
     padding: 0;
+}
+button{
+    background-color: white;
 }
