--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<div class="login bg-light">
+    <div class="login-container">
+        <h2>Login</h2>
+        <form action="#" method="post">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" placeholder="type your username here">
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" placeholder="type your password here">
+            <div class="container-login100-form-btn">
+                <div class="wrap-login100-form-btn">
+                    <div class="login100-form-bgbtn"></div>
+                    <button class="login100-form-btn" fdprocessedid="72dyz" type="submit">Login</button>
+                </div>
+            </div>
+            <div class="flex-col-c p-t-155">
+                <div class="txt1 p-b-17">Or signup using</div>
+                <a href="#">sign up</a>
+
+            </div>
+        </form>
+    </div>
+</div>
