--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,13 +16,13 @@
             <div class="position-sticky pt-3">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">
-                            <span data-feather="home"></span> Dashboard
+                        <a class="nav-link active" aria-current="page" href="#" routerLink="/userform">
+                            <span data-feather="home"></span> Profile
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="file"></span> Orders
+                        <a class="nav-link" href="#" routerLink="/blog">
+                            <span data-feather="file"></span> Blog Posts
                         </a>
                     </li>
                     <li class="nav-item">
@@ -53,6 +53,9 @@
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2">Dashboard</h1>
+            </div>
+            <div>
+                <router-outlet></router-outlet>
             </div>
         </main>
     </div>
