--- a/src/app/userform/userform.component.html
+++ b/src/app/userform/userform.component.html
@@ -1,5 +1,4 @@
-
-<div class="container">
+<div class="container-fluid">
     <h2> Personal Information </h2>
     <form>
         <div class="form-group">
@@ -39,6 +38,3 @@
         <button type="submit" class="btn btn-primary">Back</button>
     </form>
 </div>
-
-
-
