--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-<app-dashboard></app-dashboard>
-=======
-
->>>>>>> 46ada325adbb56032743c632264aa744a011c94c
+<router-outlet></router-outlet>
