--- a/src/app/editform/editform.component.html
+++ b/src/app/editform/editform.component.html
@@ -1,5 +1,5 @@
 
-    <div class="container">
+    <div class="container-fluid">
         <h2> Blog Information </h2>
         <form>
             <div class="form-group">
