--- a/src/app/userform/userform.component.html
+++ b/src/app/userform/userform.component.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container-fluid">
     <h2> Personal Information </h2>
     <form>
         <div class="form-group">
