--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="first">
     <header >
         <div class="d-flex flex-row justify-content-between pt-5 text-white"> <p class="text">Programming Hub</p>
-     <nav >
+     <nav>
         <ul class=" gaping d-flex flex-row justify-content-end ">
           <li ><a href="#"class=" alink text-white">Home</a></li>
           <li><a href="#" class=" alink text-white">Pages</a></li>
@@ -18,7 +18,9 @@
         <p>Enjoy Personalized,Fun,And Interactive Learning Process While Becoming a Programming Hero</p>
       </div> 
       <div class="d-flex flex-row outer-border mt-5 ">
-        <div class="border1"></div>
+        <div class="border1">
+          <img src="../../assets/right-arrow-svgrepo-com (2).svg">
+        </div>
         <div class="border4"></div>
         <div class="border2"></div>
         <div class="border3"></div>
@@ -26,6 +28,5 @@
     </div>
 </div>
   </div>
-
 
   
