commit before pulling sine up

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -22,7 +22,7 @@
                     allergies.
                 </td>
                 <th> <button>Delete</button></th>
-                <th> <button>Edit</button></th>
+                <th> <button routerLink="/dashboard/editform">Edit</button></th>
 
             </tr>
             <tr>
@@ -31,7 +31,7 @@
                 <td>cashew</td>
                 <td>Cashew nuts are low in sugar and may help regulate blood sugar levels. · Cashew nuts are a good source of energy and can be a healthy snack ...</td>
                 <th> <button>Delete</button></th>
-                <th> <button>Edit</button></th>
+                <th> <button routerLink="/dashboard/editform">Edit</button></th>
 
             </tr>
             <tr>
@@ -41,7 +41,7 @@
                 <td>KIshmish or raisins are shriveled grapes that are produced in a number of regions around the world. They are naturally sweet and can be eaten raw or used in cooking, brewing, and baking. Depending on the variety of grapes, their colors,
                     and sizes, raisins can appear green, yellow, brown, and even purple.</td>
                 <th> <button>Delete</button></th>
-                <th> <button>Edit</button></th>
+                <th> <button routerLink="/dashboard/editform">Edit</button></th>
 
             </tr>
             <tr>
@@ -51,7 +51,7 @@
                 <td>Fruits are a good source of vitamins and minerals, recognized for their role in preventing vitamin C and vitamin A deficiencies. People who incorporate fruits and vegetables as part of a healthy eating pattern have a reduced risk of some
                     chronic diseases.</td>
                 <th> <button>Delete</button></th>
-                <th> <button>Edit</button></th>
+                <th> <button routerLink="/dashboard/editform">Edit</button></th>
 
             </tr>
             <tr>
@@ -61,7 +61,7 @@
                 <td>Walnuts have been touted because they resemble one with their furrowed appearance. The funny thing is that research has proved that consuming walnuts regularly does improve brain function. They are better than most other nuts, even almonds
                     because they have a high amount of polyunsaturated fat, vitamins, and minerals like potassium, iron, zinc, and magnesium. Fibre-rich and antioxidant-rich, walnuts trump all the other dry fruits on all accounts</td>
                 <th> <button>Delete</button></th>
-                <th> <button>Edit</button></th>
+                <th> <button routerLink="/dashboard/editform">Edit</button></th>
 
             </tr>
 
