--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
 
     <div class="navbar-nav">
         <div class="nav-item text-nowrap">
-            <a class="nav-link px-3 text-light" href="#">Sign out</a>
+            <a class="nav-link px-3 text-light" href="#" routerLink="/home">Sign out</a>
         </div>
     </div>
 </header>
@@ -16,35 +16,21 @@
             <div class="position-sticky pt-3">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" routerLink="/userform">
-                            <span data-feather="home"></span> Profile
+                        <a class="nav-link active" aria-current="page" href="#" routerLink="/dashboard">
+                            <span data-feather="home"></span> Dashboard
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" routerLink="/blog">
-                            <span data-feather="file"></span> Blog Posts
+                        <a class="nav-link" href="#" routerLink="/dashboard/userform">
+                            <span data-feather="file"></span> Profile
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="shopping-cart"></span> Products
+                        <a class="nav-link" href="#" routerLink="/dashboard/blog">
+                            <span data-feather="file"></span> Blog posts
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="users"></span> Customers
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="bar-chart-2"></span> Reports
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="layers"></span> Integrations
-                        </a>
-                    </li>
+
                 </ul>
 
             </div>
@@ -52,7 +38,7 @@
 
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2">Dashboard</h1>
+                <h1 class="h2">Welcome user</h1>
             </div>
             <div>
                 <router-outlet></router-outlet>
