--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -9,24 +9,32 @@ body {
     background-color: #34495e;
     color: #ecf0f1;
 }
-.login{
+
+.login {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
+
 .login-container {
     background-color: #fff;
     padding: 30px;
-    
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 300px;
 }
-.container-login100-form-btn{
+
+.container-login100-form-btn {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
+
 .wrap-login100-form-btn {
     width: 100%;
     display: block;
@@ -34,30 +42,36 @@ body {
     z-index: 1;
     border-radius: 25px;
     overflow: hidden;
-    margin: 0 auto;}
+    margin: 0 auto;
+}
+
 .login100-form-bgbtn {
-        position: absolute;
-        z-index: -1;
-        width: 300%;
-        height: 100%;
-        background: #887e90;
-        background: -webkit-linear-gradient(right,#00dbde,#fc00ff,#00dbde,#fc00ff);}
-        .login100-form-btn {
-            font-family: Poppins-Medium;
-            font-size: 16px;
-            color: #fff;
-            line-height: 1.2;
-            text-transform: uppercase;
-            display: -webkit-box;
-            display: -webkit-flex;
-            display: -moz-box;
-            display: -ms-flexbox;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 0 20px;
-            width: 100%;
-            height: 50px;}
+    position: absolute;
+    z-index: -1;
+    width: 300%;
+    height: 100%;
+    background: #887e90;
+    background: -webkit-linear-gradient(right, #00dbde, #fc00ff, #00dbde, #fc00ff);
+}
+
+.login100-form-btn {
+    font-family: Poppins-Medium;
+    font-size: 16px;
+    color: #fff;
+    line-height: 1.2;
+    text-transform: uppercase;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+    width: 100%;
+    height: 50px;
+}
+
 
 /* #h1{
     display: block;
@@ -99,7 +113,8 @@ button {
 button:hover {
     background-color: #586bd7;
 }
-.flex-col-c{
+
+.flex-col-c {
     display: flex;
     flex-direction: column;
     justify-content: center;
