--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="login bg-light">
+<div class="login bg-light w-70">
     <div class="login-container">
         <h2>Login</h2>
         <form action="#" method="post">
