--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="flex-col-c p-t-155">
-                <a href="#">sign up</a>
+                <a href="#" routerLink="/signup">sign up</a>
 
             </div>
         </form>
