--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -12,7 +12,6 @@
 
         <button type="submit">Sign Up</button>
 
-        <p>Already have an account? <a href="#">Login here</a>.</p>
+        <p>Already have an account? <a href="#" routerLink="/login">Login here</a>.</p>
     </form>
 </div>
-
