--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -29,3 +29,15 @@ h1 {
 button{
     background-color: white;
 }
+.button-set
+{
+    display: flex;
+    justify-content: space-between;
+}
+.add
+{
+    background-color: blue;
+    color:white;
+    border: 0px;
+    width: 17%;
+}
