--- a/src/app/userform/userform.component.html
+++ b/src/app/userform/userform.component.html
@@ -32,7 +32,7 @@
         </div>
         <div class="form-group">
             <label for="blogTitle" class="headings">Contact number</label><br>
-            <input type="number" class="form-control" id="blogTitle" placeholder="Your mobile number">
+            <input type="tell" class="form-control" id="blogTitle" placeholder="Your mobile number">
         </div>
         <button type="submit" class="btn btn-primary">Update</button> &nbsp;
         <button type="submit" class="btn btn-primary">Back</button>
