--- a/src/app/editform/editform.component.html
+++ b/src/app/editform/editform.component.html
@@ -1,59 +1,10 @@
-<<<<<<< HEAD
-
-    <div class="container-fluid">
-        <h2> Blog Information </h2>
-        <form>
-            <div class="form-group">
-                <img src="../../assets/userimageround.png"><label for="image"> &nbsp; Profile Image:</label>
-                <p>&nbsp;</p>
-                <input type="file" class="form-control-file" id="image" accept="image/*">
-            </div>
-            <div class="form-group">
-                <label for="username" class="headings">Name</label><br>
-                <input type="text" class="form-control" id="username" placeholder="Enter your name">
-            </div>
-            <div class="form-group">
-                <label for="email" class="headings">User Name</label><br>
-                <input type="email" class="form-control" id="email" placeholder="Enter your username">
-            </div>
-            <div class="form-group">
-                <label for="email" class="headings">Blog link</label><br>
-                <input type="email" class="form-control" id="email" placeholder="Enter your bloglink">
-            </div>
-            <div class="form-group">
-                <label for="blogTitle" class="headings">Blog Title</label><br>
-                <input type="text" class="form-control" id="blogTitle" placeholder="Enter your blog title">
-            </div>
-            <div class="form-group">
-                <label for="blogContent" class="headings">Blog Content</label><br>
-                <textarea class="form-control" id="blogContent" rows="4" placeholder="Write your blog description here"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Update</button> &nbsp;
-            <button type="submit" class="btn btn-primary">Back</button>
-        </form>
-    </div>
-
-
-=======
-<div class="container">
+<div class="container-fluid">
     <h2> Blog Information </h2>
     <form>
         <div class="form-group">
             <img src="../../assets/userimageround.png"><label for="image"> &nbsp; Profile Image:</label>
             <p>&nbsp;</p>
             <input type="file" class="form-control-file" id="image" accept="image/*">
-        </div>
-        <div class="form-group">
-            <label for="username" class="headings">Name</label><br>
-            <input type="text" class="form-control" id="username" placeholder="Enter your name">
-        </div>
-        <div class="form-group">
-            <label for="email" class="headings">User Name</label><br>
-            <input type="email" class="form-control" id="email" placeholder="Enter your username">
-        </div>
-        <div class="form-group">
-            <label for="email" class="headings">Blog link</label><br>
-            <input type="email" class="form-control" id="email" placeholder="Enter your bloglink">
         </div>
         <div class="form-group">
             <label for="blogTitle" class="headings">Blog Title:</label><br>
@@ -63,8 +14,9 @@
             <label for="blogContent" class="headings">Blog Content:</label><br>
             <textarea class="form-control" id="blogContent" rows="4" placeholder="Write your blog description here"></textarea>
         </div>
+        <div>
         <button type="submit" class="btn btn-primary">Update</button> &nbsp;
         <button type="submit" class="btn btn-primary">Back</button>
+        </div>
     </form>
 </div>
->>>>>>> 7c25044370652d7539b7c777a9339fa0fdd64edd
