--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
             <div class="position-sticky pt-3">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" routerLink="/dashboard">
+                        <a class="nav-link active" aria-current="page" href="#" routerLink="/dashboard/greeting">
                             <span data-feather="home"></span> Dashboard
                         </a>
                     </li>
@@ -37,9 +37,7 @@
         </nav>
 
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2">Welcome user</h1>
-            </div>
+
             <div>
                 <router-outlet></router-outlet>
             </div>
