--- a/src/app/editform/editform.component.html
+++ b/src/app/editform/editform.component.html
@@ -2,13 +2,17 @@
     <h2> Blog Information </h2>
     <form>
         <div class="form-group">
-            <img src="../../assets/userimageround.png"><label for="image"> &nbsp; Profile Image:</label>
+            <img src="../../assets/userimageround.png"><label for="image"> &nbsp; Blog Image:</label>
             <p>&nbsp;</p>
             <input type="file" class="form-control-file" id="image" accept="image/*">
         </div>
         <div class="form-group">
             <label for="blogTitle" class="headings">Blog Title:</label><br>
             <input type="text" class="form-control" id="blogTitle" placeholder="Enter your blog title">
+        </div>
+        <div class="form-group">
+            <label for="blogTitle" class="headings">Blog Category:</label><br>
+            <input type="text" class="form-control" id="blogTitle" placeholder="Enter your blog category">
         </div>
         <div class="form-group">
             <label for="blogContent" class="headings">Blog Content:</label><br>
