--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -19,12 +19,12 @@
                 <td><img src="../../assets/almond.jpg"> </td>
                 <td>Dry Fruits </td>
                 <td>Almond & Peanut</td>
-         
+
                 <td>Peanuts take the lead in protein content and antioxidant properties, while almonds boast higher levels of vitamin E. At the end, the choice between these two nutritious nuts boils down to personal preference, dietary needs, and any potential
                     allergies.
                 </td>
                 <th> <button>Delete</button></th>
-                <th> <button routerLink="/dashboard/add">Edit</button></th>
+                <th> <button routerLink="/dashboard/editform">Edit</button></th>
 
             </tr>
             <tr>
