--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,14 +1,14 @@
 <div id="signup-container">
     <header>Sign Up</header>
-    <form id="signup-form">
+    <form id="signup-form"(ngSubmit)="onSubmit()">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" id="username" name="username" required [(ngModel)]="Data.username">
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" required [(ngModel)]="Data.email">
 
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" required [(ngModel)]="Data.password">
 
         <button type="submit">Sign Up</button>
 
