--- a/src/app/editform/editform.component.html
+++ b/src/app/editform/editform.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid">
+       
     <h2> Blog Information </h2>
-    <form>
+    <form (ngSubmit)="onSubmit()">
         <div class="form-group">
             <img src="../../assets/userimageround.png"><label for="image"> &nbsp; Blog Image:</label>
             <p>&nbsp;</p>
@@ -8,18 +9,18 @@
         </div>
         <div class="form-group">
             <label for="blogTitle" class="headings">Blog Title:</label><br>
-            <input type="text" class="form-control" id="blogTitle" placeholder="Enter your blog title">
+            <input type="text" class="form-control" name="title" id="blogTitle" placeholder="Enter your blog title" [(ngModel)]="blogData.title">
         </div>
         <div class="form-group">
             <label for="blogTitle" class="headings">Blog Category:</label><br>
-            <input type="text" class="form-control" id="blogTitle" placeholder="Enter your blog category">
+            <input type="text" class="form-control" name="category" id="blogTitle" placeholder="Enter your blog category" [(ngModel)]="blogData.category">
         </div>
         <div class="form-group">
             <label for="blogContent" class="headings">Blog Content:</label><br>
-            <textarea class="form-control" id="blogContent" rows="4" placeholder="Write your blog description here"></textarea>
+            <textarea class="form-control" id="blogContent" name="desc" rows="4" placeholder="Write your blog description here" [(ngModel)]="blogData.desc"></textarea>
         </div>
         <div>
-            <button type="submit" class="btn btn-primary">Update</button> &nbsp;
+            <button type="submit" class="btn btn-primary">Add</button> &nbsp;
             <button type="submit" class="btn btn-primary">Back</button>
         </div>
     </form>
