--- a/src/app/userform/userform.component.html
+++ b/src/app/userform/userform.component.html
@@ -1,6 +1,7 @@
-<div class="container-fluid">
+<div class="container-fluid" *ngIf="userData">
     <h2> Personal Information </h2>
-    <form>
+    <h2> {{ userData.username }}</h2>
+    <form (ngSubmit)="onSubmit()">
         <div class="form-group">
             <img src="../../assets/userimageround.png"><label for="image"> &nbsp; Profile Image:</label>
             <p>&nbsp;</p>
@@ -8,33 +9,33 @@
         </div>
         <div class="form-group">
             <label for="username" class="headings">Name</label><br>
-            <input type="text" class="form-control" id="username" placeholder="Enter your name">
+            <input type="text" class="form-control" id="username" [(ngModel)]="updatedData.name"/>
         </div>
         <div class="form-group">
             <label for="email" class="headings">User Name</label><br>
-            <input type="text" class="form-control" id="email" placeholder="Enter your username">
+            <input type="text" class="form-control" id="email" value="{{ userData.username}}"  placeholder="Enter your username"/>
         </div>
         <div class="form-group">
             <label for="email" class="headings">Email</label><br>
-            <input type="email" class="form-control" id="email" placeholder="Enter your email">
+            <input type="email" class="form-control" id="email" value="{{ userData.email}}" placeholder="Enter your email" />
         </div>
         <div class="form-group">
             <label for="blogTitle" class="headings">Date of birth</label><br>
-            <input type="date" class="form-control" id="blogTitle" placeholder="Enter your dob">
+            <input type="date" class="form-control" id="blogTitle" placeholder="Enter your dob" [(ngModel)]="updatedData.dob" name="dob"/>
         </div>
         <div class="form-group">
             <label for="blogTitle" class="headings">Gender</label><br>
-            <input type="text" class="form-control" id="blogTitle" placeholder="Male/Female">
+            <input type="text" class="form-control" id="blogTitle" placeholder="Male/Female" [(ngModel)]="updatedData.gender" name="gender"/>
         </div>
         <div class="form-group">
             <label for="blogTitle" class="headings">Nationality</label><br>
-            <input type="text" class="form-control" id="blogTitle" placeholder="Indian">
+            <input type="text" class="form-control" id="blogTitle" placeholder="Indian" [(ngModel)]="updatedData.nationality" name="nationality"/>
         </div>
         <div class="form-group">
             <label for="blogTitle" class="headings">Contact number</label><br>
-            <input type="tell" class="form-control" id="blogTitle" placeholder="Your mobile number">
+            <input type="tell" class="form-control" id="blogTitle" placeholder="Your mobile number" [(ngModel)]="updatedData.phone" name="phone">
         </div>
-        <button type="submit" class="btn btn-primary">Update</button> &nbsp;
-        <button type="submit" class="btn btn-primary">Back</button>
+        <button type="submit" class="btn btn-primary" (click)="onSubmit()">Update</button> &nbsp;
+        <button  class="btn btn-primary">Back</button>
     </form>
 </div>
