--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -2,11 +2,11 @@
     <div>
         <header class="button-set">
             <h1>My Blog</h1>
-            <button routerLink="/dashboard/editform" class="add" >Add Blog</button>
+            <button routerLink="/dashboard/editform" class="add">Add Blog</button>
         </header>
         <table>
             <tr>
-              
+
                 <th class="header">Image</th>
                 <th class="header">Category</th>
                 <th class="header">Title</th>
@@ -20,15 +20,17 @@
                 <td>{{ post.category}}</td>
                 <td>{{ post.title }}</td>
                 <td>{{ post.desc }}</td>
-           
-               
-                <th> <button (click)="deleteblog(post._id)">Delete</button></th>
+
+                <td>{{post._id}}</td>
+
+
+                <th> <button (click)="deleteBlogPost(post?._id)">Delete</button></th>
                 <th> <button routerLink="/dashboard/editform">Edit</button></th>
 
             </tr>
-           
-    >
-                
+
+
+
 
         </table>
     </div>
