final push 11-oct

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,13 +3,11 @@
 }
 
 .background-image {
-    background-image: url('../../assets/image.jpg');
-    background-size: cover;
-    background-position: center;
-    min-height: 100vh;
-    /* width: 100vw;Adjust the height as needed */
-    overflow: hidden;
-    padding-bottom: 100px;
+    background-color: #8571d4;
+    background-image: linear-gradient(225deg, #8571d4 0%, #784BA0 50%, #2B86C5 100%);
+    
+    
+  
 }
 
 .text {
@@ -31,46 +29,24 @@
     padding-top: 80px;
 }
 
-.outer-border {
-    gap: 30px;
-    margin-top: 10%;
-}
 
-.border1 {
-    border-radius: 12px;
-    height: 300px;
-    width: 250px;
-    background-image: url('../../assets/image1.jpg');
-    background-size: cover;
-    background-position: center;
-}
 
 .border2 {
     border-radius: 12px;
     height: 300px;
-    width: 250px;
+    width: 210px;
     background-image: url('../../assets/image2.jpg');
     background-size: cover;
     background-position: center;
 }
+.cards{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin-top: 10%;
 
-.border3 {
-    border-radius: 12px;
-    height: 300px;
-    width: 250px;
-    background-image: url('../../assets/image3.jpg');
-    background-size: cover;
-    background-position: center;
 }
 
-.border4 {
-    border-radius: 12px;
-    height: 300px;
-    width: 250px;
-    background-image: url('../../assets/image4.jpg');
-    background-size: cover;
-    background-position: center;
-}
 
 .alink {
     text-decoration: none;
