--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -14,73 +14,20 @@
                 <th class="header"></th>
                 <th class="header"></th>
             </tr>
-            <tr>
-                <td>1</td>
+
+            <tr *ngFor="let post of blogListData">
                 <td><img src="../../assets/almond.jpg"> </td>
-                <td>Dry Fruits </td>
-                <td>Almond & Peanut</td>
-
-                <td>Peanuts take the lead in protein content and antioxidant properties, while almonds boast higher levels of vitamin E. At the end, the choice between these two nutritious nuts boils down to personal preference, dietary needs, and any potential
-                    allergies.
-                </td>
-                <th> <button>Delete</button></th>
-                <th> <button routerLink="/dashboard/editform" (click)="editBlog()">Edit</button></th>
-
-            </tr>
-            <tr>
-                <td>2</td>
-                <td><img src="../../assets/cashew.jpg"> </td>
-                <td>Dry Fruits </td>
-                <td>Cashew</td>
-                <td>Cashew nuts are low in sugar and may help regulate blood sugar levels. · Cashew nuts are a good source of energy and can be a healthy snack ...</td>
-                <th> <button>Delete</button></th>
-                <th> <button routerLink="/dashboard/editform">Edit</button></th>
-
-            </tr>
-            <tr>
-                <td>3</td>
-                <td><img src="../../assets/kismish.webp"> </td>
-                <td>Dry Fruits </td>
-                <td>Kishmish</td>
-                <td>KIshmish or raisins are shriveled grapes that are produced in a number of regions around the world. They are naturally sweet and can be eaten raw or used in cooking, brewing, and baking. Depending on the variety of grapes, their colors,
-                    and sizes, raisins can appear green, yellow, brown, and even purple.</td>
-                <th> <button>Delete</button></th>
-                <th> <button routerLink="/dashboard/editform">Edit</button></th>
-
-            </tr>
-            <tr>
-                <td>4</td>
-                <td><img src="../../assets/fruits.jpg"> </td>
-                <td>Fruits </td>
-                <td>All Fruits</td>
-                <td>Fruits are a good source of vitamins and minerals, recognized for their role in preventing vitamin C and vitamin A deficiencies. People who incorporate fruits and vegetables as part of a healthy eating pattern have a reduced risk of some
-                    chronic diseases.</td>
-                <th> <button>Delete</button></th>
-                <th> <button routerLink="/dashboard/editform">Edit</button></th>
-
-            </tr>
-            <tr>
-                <td>5</td>
-                <td><img src="../../assets/walnut.jpg"> </td>
-                <td>Dry Fruits </td>
-                <td>Walnut</td>
-                <td>Walnuts have been touted because they resemble one with their furrowed appearance. The funny thing is that research has proved that consuming walnuts regularly does improve brain function. They are better than most other nuts, even almonds
-                    because they have a high amount of polyunsaturated fat, vitamins, and minerals like potassium, iron, zinc, and magnesium. Fibre-rich and antioxidant-rich, walnuts trump all the other dry fruits on all accounts</td>
-                <th> <button>Delete</button></th>
-                <th> <button routerLink="/dashboard/editform">Edit</button></th>
-
-            </tr>
-            
                 <td>{{ post.category}}</td>
                 <td>{{ post.title }}</td>
                 <td>{{ post.desc }}</td>
 
 
                 <th> <button (click)="deleteBlogPost(post?._id)">Delete</button></th>
-                <th> <button routerLink="/dashboard/editform">Edit</button></th>
+                <th> <button (click)="edit(post?._id)">Edit</button></th>
+
+            </tr>
 
 
- </tr>
 
 
         </table>
