--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,28 +19,25 @@
         </div>
        
           
-                <div class="d-flex flex-row outer-border mt-5 flex-wrap">
-                    <div class="border1">
-                      <div class="text-white ps-4 pt-3">Jane Cooper</div>
-                      <div class="text-white ps-4 card-text">Why Avoiding Programming Is Bad for Your Business?</div>
-                      <div class="text-white ps-4">Oct 8,2023</div>
-                    </div>
-                    <div class="border4">
-                      <div class="text-white ps-4 pt-3">Jane Cooper</div>
-                      <div class="text-white ps-4 card-text">Social media Hacking- What is Phishing?</div>
-                      <div class="text-white ps-4">Oct 8,2023</div>
-                    </div>
-                    <div class="border2">
-                      <div class="text-white ps-4 pt-3">Jane Cooper</div>
-                      <div class="text-white ps-4 card-text">6 Life Lessons From a Self Taught</div>
-                      <div class="text-white ps-4">Oct 8,2023</div>
-                    </div>
-                    <div class="border3">
-                      <div class="text-white ps-4 pt-3">Jane Cooper</div>
-                      <div class="text-white ps-4 card-text">The Simplest Path To Become a  Software Engineer</div>
-                      <div class="text-white ps-4">Oct 8,2023</div>
-                    </div>
+              
+
+                    
                    
+        <div class="cards">
+                     
+                  <div *ngFor="let post of blogListData" >
+                  
+                    <div  class="border2 ">
+                        <div class="text-white ps-4 pt-3 text-wrap" >{{ post.title }}</div>
+                        <div class="text-white ps-4 card-text text-wrap">{{ post.desc }}</div>
+                        <div class="text-white ps-4">{{ post.date }}</div>
+                      
+                    </div>
+                </div>
+                  </div>
+                    
+                                  
+              
                     
         
                 </div>
@@ -50,6 +47,6 @@
 
 
 
-    </div>
+  
 
   
