--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,12 +1,14 @@
 <body>
-    <div>
+    <div class="blogpost">
         <header class="button-set">
             <h1>My Blog</h1>
-            <button routerLink="/dashboard/editform" class="add">Add Blog</button>
+            <button routerLink="/dashboard/editblog" class="add">Add Blog</button>
+   
         </header>
         <table>
             <tr>
-
+                <th class="header">Id</th>
+          
                 <th class="header">Image</th>
                 <th class="header">Category</th>
                 <th class="header">Title</th>
@@ -16,12 +18,13 @@
             </tr>
 
             <tr *ngFor="let post of blogListData">
+                <td>{{post._id}}</td>
                 <td><img src="../../assets/almond.jpg"> </td>
                 <td>{{ post.category}}</td>
                 <td>{{ post.title }}</td>
                 <td>{{ post.desc }}</td>
 
-                <td>{{post._id}}</td>
+            
 
 
                 <th> <button (click)="deleteBlogPost(post?._id)">Delete</button></th>
