before pulling rajat

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
 
     <div class="navbar-nav">
         <div class="nav-item text-nowrap">
-            <a class="nav-link px-3 text-light" href="#" routerLink="/home">Sign out</a>
+            <a class="nav-link px-3 text-light" href="#" (click)="logout()">Sign out</a>
         </div>
     </div>
 </header>
