--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -7,7 +7,7 @@
         </header>
         <table>
             <tr>
-                <th class="header">Id</th>
+                <th class="header">S. No.</th>
 
                 <th class="header">Image</th>
                 <th class="header">Category</th>
@@ -17,8 +17,8 @@
                 <th class="header"></th>
             </tr>
 
-            <tr *ngFor="let post of blogListData">
-                <td>{{post._id}}</td>
+            <tr *ngFor="let post of blogListData; let i = index">
+                <td>{{i+1}}</td>
                 <td><img src="../../assets/almond.jpg"> </td>
                 <td>{{ post.category}}</td>
                 <td>{{ post.title }}</td>
