--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,7 +23,7 @@
 
                     
                    
-        <div class="cards">
+        <div class="cards d-flex justify-content-center align-items-center">
                      
                   <div *ngFor="let post of blogListData" >
                   
