--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
         </div>
         <h2>Login</h2>
         <form (ngSubmit)="onSubmit()">
-            <label for="username">Username:</label>
+            <label for="username">Email:</label>
             <input type="text" id="username" name="email" placeholder="type your username here" [(ngModel)]="formData.email">
 
             <label for="password">Password:</label>
