before push 12oct evening

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -19,7 +19,7 @@
 
             <tr *ngFor="let post of blogListData; let i = index">
                 <td>{{i+1}}</td>
-                <td><img src="../../assets/almond.jpg"> </td>
+                <td><img src={{post?.image}}> </td>
                 <td>{{ post.category}}</td>
                 <td>{{ post.title }}</td>
                 <td>{{ post.desc }}</td>
