--- a/src/app/userform/userform.component.html
+++ b/src/app/userform/userform.component.html
@@ -4,7 +4,7 @@
         <div class="form-group">
             <img src="../../assets/userimageround.png"><label for="image"> &nbsp; Profile Image:</label>
             <p>&nbsp;</p>
-            <input type="file" class="form-control-file" id="image" accept="image/*">
+            <input type="file" (change)="onFileChange($event)">
         </div>
         <div class="form-group">
             <label for="username" class="headings">Name</label><br>
