--- a/src/app/editblog/editblog.component.html
+++ b/src/app/editblog/editblog.component.html
@@ -5,7 +5,7 @@
         <div class="form-group">
             <img src="../../assets/userimageround.png"><label for="image"> &nbsp; Blog Image:</label>
             <p>&nbsp;</p>
-            <input type="file" class="form-control-file" id="image" accept="image/*">
+            <input type="file" (change)="onFileChange($event)" class="form-control-file" id="image" accept="image/*">
         </div>
         <div class="form-group">
             <label for="blogTitle" class="headings">Blog Title:</label><br>
