--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -30,6 +30,16 @@
                             <span data-feather="file"></span> Blog posts
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" routerLink="/dashboard/projects">
+                            <span data-feather="file"></span> Projects
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" routerLink="/dashboard/enquiry">
+                            <span data-feather="file"></span> Enquiry
+                        </a>
+                    </li>
 
                 </ul>
 
