--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,6 +8,7 @@
                         <li><a href="#" class=" alink text-white">Home</a></li>
                         <li><a href="#" class=" alink text-white">Pages</a></li>
                         <li><a href="#" class=" alink text-white">Blog</a></li>
+                        <li><a href="#" class=" alink text-white" routerLink="/contact">Contact Us</a></li>
                         <li><a href="#" class=" alink text-white" routerLink="/login">Login / SignUp</a></li>
                     </ul>
                 </nav>
