--- a/src/app/edittype/edittype.component.html
+++ b/src/app/edittype/edittype.component.html
@@ -6,5 +6,5 @@
         <label for="type">Type:</label>
         <input type="text" id="type" name="type" required [(ngModel)]="updatedData.type">
         <br><br>
-        <button type="submit">UPdate</button>
+        <button type="submit">Update</button>
     </form>
