--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -37,6 +37,11 @@
                         </a>
                     </li>
 
+                    <li class="nav-item" *ngIf="userRole != 'admin'">
+                        <a class="nav-link" href="#" routerLink="/dashboard/chat">
+                            <span data-feather="file"></span> Chat Manager
+                        </a>
+                    </li>
 
                     <li class="nav-item" *ngIf="userRole === 'admin'">
                         <a class="nav-link" href="#" routerLink="/dashboard/enquiry">
